brand mcsc instead of sing

--- a/node/src/app/dashboard/dashboard.template.html
+++ b/node/src/app/dashboard/dashboard.template.html
@@ -1,9 +1,7 @@
 <h1 class="page-title">Dashboard <small><small>The Lucky One</small></small></h1>
 <div class="clearfix mb-lg">
   <img class="pull-left mr-sm mt-n-xs" src="assets/img/a2.png" alt="Angular 4.0" width="100">
-  <p class="lead">You are looking at a completely new version of Sing App built
-    with brand new <strong>Angular 4.0</strong> Final Release!</p>
-  <p class="fs-mini">Made by <a href="http://flatlogic.com" target="_blank">Flatlogic</a>.</p>
+  <p class="lead">Welcome to the MCSC Portal!</p>
 </div>
 <div class="row">
   <div class="col-lg-8 col-12">
