--- a/node/src/app/dashboard/dashboard.template.html
+++ b/node/src/app/dashboard/dashboard.template.html
@@ -1,6 +1,6 @@
-<h1 class="page-title">Dashboard <small><small>The Lucky One</small></small></h1>
+<h1 class="page-title">Dashboard <small><small>The Lucky One</small></small>
+</h1>
 <div class="clearfix mb-lg">
-  <img class="pull-left mr-sm mt-n-xs" src="assets/img/a2.png" alt="Angular 4.0" width="100">
   <p class="lead">Welcome to the MCSC Portal!</p>
 </div>
 <div class="row">
@@ -10,19 +10,7 @@
     <section class="widget bg-transparent">
       <!-- .widget-body is a mostly semantic class. may be a sibling to .widget>header or .widget>footer -->
       <div class="widget-body">
-        <!-- for this particular example we also need to preload us map, as this is mapael's extension -->
-        <div class="mapael" geo-locations-widget>
-          <div class="stats">
-            <h6 class="text-white m-t-1">GEO-LOCATIONS</h6>
-            <p class="h3 text-warning no-margin">
-              <strong number-animate>1 656 843</strong>
-              <i class="fa fa-map-marker"></i>
-            </p>
-          </div>
-          <div class="map">
-            <span>Alternative content for the map</span>
-          </div>
-        </div>
+        
       </div>
     </section>
   </div>
@@ -42,8 +30,7 @@
       <div class="widget-body">
         <p>Status: <strong>Live</strong></p>
         <p>
-          <span class="circle bg-warning"><i class="fa fa-map-marker"></i></span>
-          146 Countries, 2759 Cities
+          <span class="circle bg-warning"><i class="fa fa-map-marker"></i></span> 146 Countries, 2759 Cities
         </p>
         <div class="row progress-stats">
           <div class="col-md-9 col-12">
@@ -54,9 +41,9 @@
             </div>
           </div>
           <div class="col-md-3 col-12 text-center">
-                                <span class="status rounded rounded-lg bg-body-light">
+            <span class="status rounded rounded-lg bg-body-light">
                                     <small><span number-animate>75</span>%</small>
-                                </span>
+            </span>
           </div>
         </div>
         <div class="row progress-stats">
@@ -68,9 +55,9 @@
             </div>
           </div>
           <div class="col-md-3 col-12 text-center">
-                                <span class="status rounded rounded-lg bg-body-light">
+            <span class="status rounded rounded-lg bg-body-light">
                                     <small><span number-animate>84</span>%</small>
-                                </span>
+            </span>
           </div>
         </div>
         <div class="row progress-stats">
@@ -82,20 +69,19 @@
             </div>
           </div>
           <div class="col-md-3 col-12 text-center">
-                                <span class="status rounded rounded-lg bg-body-light">
+            <span class="status rounded rounded-lg bg-body-light">
                                     <small><span number-animate>92</span>%</small>
-                                </span>
+            </span>
           </div>
         </div>
         <h6 class="fw-semi-bold mt">Map Distributions</h6>
         <p>Tracking: <strong>Active</strong></p>
         <p>
-          <span class="circle bg-warning"><i class="fa fa-cog"></i></span>
-          391 elements installed, 84 sets
+          <span class="circle bg-warning"><i class="fa fa-cog"></i></span> 391 elements installed, 84 sets
         </p>
         <div class="input-group mt">
           <input type="text" class="form-control" placeholder="Search Map">
-                            <span class="input-group-btn">
+          <span class="input-group-btn">
                                 <button type="submit" class="btn btn-default">
                                   <i class="fa fa-search text-gray"></i>
                                 </button>
@@ -138,8 +124,7 @@
         </div>
         <p>
           <small><span class="circle bg-warning"><i class="glyphicon glyphicon-chevron-up"></i></span></small>
-          <span class="fw-semi-bold">17% higher</span>
-          than last month</p>
+          <span class="fw-semi-bold">17% higher</span> than last month</p>
       </div>
     </section>
   </div>
@@ -174,8 +159,7 @@
         </div>
         <p>
           <small><span class="circle bg-warning"><i class="fa fa-chevron-down"></i></span></small>
-          <span class="fw-semi-bold">8% lower</span>
-          than last month
+          <span class="fw-semi-bold">8% lower</span> than last month
         </p>
       </div>
     </section>
@@ -211,8 +195,7 @@
         </div>
         <p>
           <small><span class="circle bg-warning"><i class="fa fa-plus"></i></span></small>
-          <span class="fw-semi-bold">8 734 higher</span>
-          than last month
+          <span class="fw-semi-bold">8 734 higher</span> than last month
         </p>
       </div>
     </section>
@@ -232,7 +215,7 @@
         <div class="list-group list-group-lg">
           <a class="list-group-item" href="#">
                                 <span class="thumb-sm float-xs-left mr">
-                                    <img class="rounded-circle" src="assets/img/people/a2.jpg" alt="...">
+                                    ...<img class="rounded-circle" src="assets/img/people/a2.jpg" alt="...">
                                     <i class="status status-bottom bg-success"></i>
                                 </span>
             <div>
@@ -290,45 +273,44 @@
       <div class="widget-body">
         <h3>$720 Earned</h3>
         <p class="fs-mini text-muted mb mt-sm">
-          Target <span class="fw-semi-bold">$820</span> day earnings
-          is <span class="fw-semi-bold">96%</span> reached.
+          Target <span class="fw-semi-bold">$820</span> day earnings is <span class="fw-semi-bold">96%</span> reached.
         </p>
       </div>
       <div class="widget-table-overflow">
         <table class="table table-striped table-sm">
           <thead class="no-bd">
-          <tr>
-            <th>
-              <div class="checkbox abc-checkbox">
-                <input id="checkbox210" type="checkbox" check-all>
-                <label for="checkbox210"></label>
-              </div>
-            </th>
-            <th></th>
-            <th></th>
-          </tr>
+            <tr>
+              <th>
+                <div class="checkbox abc-checkbox">
+                  <input id="checkbox210" type="checkbox" check-all>
+                  <label for="checkbox210"></label>
+                </div>
+              </th>
+              <th></th>
+              <th></th>
+            </tr>
           </thead>
           <tbody>
-          <tr>
-            <td>
-              <div class="checkbox abc-checkbox">
-                <input id="checkbox212" type="checkbox">
-                <label for="checkbox212"></label>
-              </div>
-            </td>
-            <td>HP Core i7</td>
-            <td class="text-align-right fw-semi-bold">$346.1</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="checkbox abc-checkbox">
-                <input id="checkbox214" type="checkbox">
-                <label for="checkbox214"></label>
-              </div>
-            </td>
-            <td>Air Pro</td>
-            <td class="text-align-right fw-semi-bold">$533.1</td>
-          </tr>
+            <tr>
+              <td>
+                <div class="checkbox abc-checkbox">
+                  <input id="checkbox212" type="checkbox">
+                  <label for="checkbox212"></label>
+                </div>
+              </td>
+              <td>HP Core i7</td>
+              <td class="text-align-right fw-semi-bold">$346.1</td>
+            </tr>
+            <tr>
+              <td>
+                <div class="checkbox abc-checkbox">
+                  <input id="checkbox214" type="checkbox">
+                  <label for="checkbox214"></label>
+                </div>
+              </td>
+              <td>Air Pro</td>
+              <td class="text-align-right fw-semi-bold">$533.1</td>
+            </tr>
           </tbody>
         </table>
       </div>
