--- a/node/src/app/dashboard/dashboard.template.html
+++ b/node/src/app/dashboard/dashboard.template.html
@@ -10,7 +10,53 @@
     <section class="widget bg-transparent">
       <!-- .widget-body is a mostly semantic class. may be a sibling to .widget>header or .widget>footer -->
       <div class="widget-body">
-        
+
+
+        <section widget class="widget">
+          <!-- .widget>header is generally a place for widget title and widget controls. see .widget in _base.scss -->
+          <header>
+            <h6>
+              MISSING PERSONS
+            </h6>
+            <div class="widget-controls">
+              <a href="#"><i class="glyphicon glyphicon-cog"></i></a>
+              <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+            </div>
+          </header>
+          <div class="widget-body">
+            <table style="width:100%;">
+              <thead>
+                <td><strong>Name</strong></td>
+                <td><strong>Date</strong></td>
+                <td><strong>Time</strong></td>
+                <td><strong>Social</strong></td>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Anthony Bartolo</td>
+                  <td>May 11, 2017</td>
+                  <td>4:20 PM</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Jef King</td>
+                  <td>May 11, 2017</td>
+                  <td>10:52 AM</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Jeremy Foster</td>
+                  <td>May 10, 2017</td>
+                  <td>7:26 PM</td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </div>
+        </section>
+
+
       </div>
     </section>
   </div>
