change dashboard title and subtitle

--- a/node/src/app/dashboard/dashboard.template.html
+++ b/node/src/app/dashboard/dashboard.template.html
@@ -1,7 +1,6 @@
-<h1 class="page-title">Dashboard <small><small>The Lucky One</small></small>
-</h1>
+<h1 class="page-title">Welcome to the MCSC Portal!</h1>
 <div class="clearfix mb-lg">
-  <p class="lead">Welcome to the MCSC Portal!</p>
+  <p class="lead">(subtitle?)</p>
 </div>
 <div class="row">
   <div class="col-lg-8 col-12">
