disable auth for now, update profile indicator on top right

--- a/node/src/app/layout/navbar/navbar.template.html
+++ b/node/src/app/layout/navbar/navbar.template.html
@@ -7,12 +7,12 @@
           Turn on/off <br> sidebar <br>collapsing
         </ng-template>
         <!-- whether to automatically collapse sidebar on mouseleave. If activated acts more like usual admin templates -->
-        <a (click)="toggleSidebar('static')" class="nav-link hidden-md-down" [tooltip]="sidebarToggleTooltip"
-           placement="bottom">
+        <a (click)="toggleSidebar('static')" class="nav-link hidden-md-down" [tooltip]="sidebarToggleTooltip" placement="bottom">
           <i class="fa fa-bars fa-lg"></i>
         </a>
         <!-- shown on xs & sm screen. collapses and expands navigation -->
-        <a (click)="toggleSidebar('collapse')" class="hidden-lg-up nav-link" href="#" data-html="true" title="Show/hide<br>sidebar" data-placement="bottom">
+        <a (click)="toggleSidebar('collapse')" class="hidden-lg-up nav-link" href="#" data-html="true" title="Show/hide<br>sidebar"
+          data-placement="bottom">
           <span class="rounded rounded-lg bg-gray text-white hidden-md-up"><i class="fa fa-bars fa-lg"></i></span>
           <i class="fa fa-bars fa-lg hidden-sm-down"></i>
         </a>
@@ -53,25 +53,15 @@
       </div>
     </form>
     <ul class="nav navbar-nav flex-row float-right" (click)="$event.preventDefault()">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle dropdown-toggle-notifications"
-           id="notifications-dropdown-toggle" data-toggle="dropdown">
-                <span class="thumb-sm avatar float-left">
-                    <img class="rounded-circle" src="assets/img/people/a5.jpg" alt="...">
-                </span>
-          &nbsp;
-          Philip <strong>Smith</strong>&nbsp;
-                <span class="circle bg-warning fw-bold">
-                    13
-                </span>
-          <b class="caret"></b>
-        </a>
-        <!-- ready to use notifications dropdown. inspired by smartadmin template.
-                     consists of three components:
-                     notifications, messages, progress. leave or add what's important for you.
-                     uses Sing's ajax-load plugin for async content loading. See #load-notifications-btn -->
-        <div notifications class="dropdown-menu dropdown-menu-right animated animated-fast fadeInUp"
-          ></div>
+      <li class="nav-item" [hidden]="authService.authenticated">
+        <div style="padding:14px">
+          (login button)
+        </div>
+      </li>
+      <li class="nav-item" [hidden]="!authService.authenticated">
+        <div style="padding:14px">
+          {{authService.user.name}}
+        </div>
       </li>
       <li class="nav-item dropdown ml-lg" [hidden]="!config.settings.showExtraUI">
         <a href class="nav-link dropdown-toggle" data-toggle="dropdown">
@@ -95,10 +85,9 @@
             <h6 class="title">
               <span class="thumb-xs">
                   <img src="assets/img/people/a6.jpg" class="rounded-circle mr-xs float-xs-left">
-              </span>
-              Jess Smith
+              </span> Jess Smith
             </h6>
-            <p class="text">Hi there! <br> This is a completely new version of Sing App <br> built with <strong class="text-danger">Angular 4.0 Final Release</strong> </p>
+            <p class="text">Hi there! <br> This is a completely new version of Sing App <br> built with <strong class="text-danger">Angular 4.0 Final Release</strong>              </p>
           </div>
         </div>
       </li>
