add mock pbi service

--- a/node/src/app/dashboard/dashboard.template.html
+++ b/node/src/app/dashboard/dashboard.template.html
@@ -10,7 +10,7 @@
       <!-- .widget-body is a mostly semantic class. may be a sibling to .widget>header or .widget>footer -->
       <div class="widget-body">
 
-
+      <pbi prop1="foo"></pbi>
         <section widget class="widget">
           <!-- .widget>header is generally a place for widget title and widget controls. see .widget in _base.scss -->
           <header>
