Added login button

--- a/node/src/app/dashboard/dashboard.template.html
+++ b/node/src/app/dashboard/dashboard.template.html
@@ -1,6 +1,8 @@
 <h1 class="page-title">Welcome to the MCSC Portal!</h1>
 <div class="clearfix mb-lg">
-  <p class="lead">(subtitle?)</p>
+  <p class="lead">
+    Missing Children Society of Canada
+  </p>
 </div>
 <div class="row">
   <div class="col-lg-8 col-12">
