--- a/node/src/app/person/person.template.html
+++ b/node/src/app/person/person.template.html
@@ -2,7 +2,7 @@
   <li class="breadcrumb-item">YOU ARE HERE</li>
   <li class="active breadcrumb-item">Profile</li>
 </ol>
-<h1 class="page-title">User - <span class="fw-semi-bold">Person</span></h1>
+<h1 class="page-title">User - <span class="fw-semi-bold">Person {{person.id}}</span></h1>
 <div class="row profile">
   <div class="col-lg-6 col-12">
     <section class="widget">
