--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -28,8 +28,8 @@
               </thead>
               <tbody>
                 <tr *ngFor="let person of dataService.persons" (click)="selectPerson(person.id)">
-                  <td>{{person.firstname}} {{person.lastname}}</td>
-                  <td>{{person.datetime}}</td>
+                  <td>{{person.givenName}} {{person.surname}}</td>
+                  <td>DOB: {{person.birthday}}</td>
                   <td><img src={{person.image}} style="width:50px;height:50px;"></td>
                 </tr>
               </tbody>
