--- a/src/app/person/person.template.html
+++ b/src/app/person/person.template.html
@@ -26,10 +26,6 @@
               </span>
               <h5 class="fw-normal">Adam <span class="fw-semi-bold">Johns</span></h5>
               <p>UI/UX designer</p>
-              <a href="#" class="btn btn-danger btn-sm mt">
-                &nbsp;Send
-                <i class="fa fa-envelope ml-xs"></i>&nbsp;
-              </a>
               <ul class="contacts">
                 <li><i class="fa fa-phone fa-fw mr-xs"></i><a href="#"> +{{person.telephoneCountryCode}} {{person.telephoneNumber}}</a></li>
                 <li><i class="fa fa-envelope fa-fw mr-xs"></i><a href="#"> {{person.emailAddress}}</a></li>
@@ -37,124 +33,46 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-7 col-12">
-            <div class="stats-row stats-row-profile mt text-right">
-              <div class="stat-item">
-                <p class="value text-right">251</p>
-                <h6 class="name">Posts</h6>
-              </div>
-              <div class="stat-item">
-                <p class="value text-right">9.38%</p>
-                <h6 class="name">Conversion</h6>
-              </div>
-              <div class="stat-item">
-                <p class="value text-right">842</p>
-                <h6 class="name">Followers</h6>
-              </div>
-            </div>
-            <p class="text-right mt-lg">
-              <a href="#" class="badge badge-warning"> UI/UX </a>
-              <a href="#" class="badge badge-danger ml-xs"> Web Design </a>
-              <a href="#" class="badge badge-default ml-xs"> Mobile Apps </a>
-            </p>
-            <p class="lead mt-lg">
-              My name is Adam Johns and here is my new Sing user profile page.
-            </p>
-            <p>
-              I love reading people's summaries page especially those who are in the same industry as me.
-              Sometimes it's much easier to find your concentration during the night.
-            </p>
-          </div>
         </div>
       </div>
     </section>
   </div>
   <div class="col-lg-6 col-12">
     <section class="activities">
-      <h2 class="m-l-1">Activities</h2>
-      <section class="event">
-        <span class="thumb-sm avatar pull-left mr-sm">
-          <img class="rounded-circle" src="assets/img/people/a5.jpg" alt="...">
-        </span>
-        <h5 class="event-heading"><a href="#">Bob Nilson</a> <small><a href="#">@nils</a></small></h5>
-        <p class="text-muted">February 22, 2014 at 01:59 PM</p>
-        <p class="fs-mini">
-          There is no such thing as maturity. There is instead an ever-evolving process of maturing.
-          Because when there is a maturity, there is ...
-        </p>
-        <footer>
-          <ul class="post-links">
-            <li><a href="#">1 hour</a></li>
-            <li><a href="#"><span class="text-danger"><i class="fa fa-heart"></i> Like</span></a></li>
-            <li><a href="#">Comment</a></li>
-          </ul>
-        </footer>
-      </section>
-      <section class="event">
-        <h5 class="event-heading"><a href="#">Jessica Smith</a> <small>@jess</small></h5>
-        <p class="text-muted">February 22, 2014 at 01:59 PM</p>
-        <p class="fs-mini">
-          Check out this awesome photo I made in Italy last summer. Seems it was lost somewhere deep inside
-          my brand new HDD 40TB. Thanks god I found it!
-        </p>
-        <footer>
-          <div class="clearfix">
-            <ul class="post-links mt-sm pull-left">
-              <li><a href="#">1 hour</a></li>
-              <li><a href="#"><span class="text-danger"><i class="fa fa-heart-o"></i> Like</span></a></li>
-              <li><a href="#">Comment</a></li>
-            </ul>
-
-            <span class="thumb thumb-sm pull-right">
-              <a href="#">
-                <img class="rounded-circle" src="assets/img/people/a1.jpg">
-              </a>
-            </span>
-            <span class="thumb thumb-sm pull-right">
-              <a href="#"><img class="rounded-circle" src="assets/img/people/a5.jpg"></a>
-            </span>
-            <span class="thumb thumb-sm pull-right">
-              <a href="#"><img class="rounded-circle" src="assets/img/people/a3.jpg"></a>
-            </span>
-          </div>
-          <ul class="post-comments mt-sm">
-            <li>
-              <span class="thumb-xs avatar pull-left mr-sm">
-                <img class="rounded-circle" src="assets/img/people/a1.jpg" alt="...">
-              </span>
-              <div class="comment-body">
-                <h6 class="author fs-sm fw-semi-bold">Ignacio Abad <small>6 mins ago</small></h6>
-                <p>Hey, have you heard anything about that?</p>
-              </div>
-            </li>
-            <li>
-              <span class="thumb-xs avatar pull-left mr-sm">
-                <img class="rounded-circle" src="assets/img/avatar.png" alt="...">
-              </span>
-              <div class="comment-body">
-                <input class="form-control form-control-sm" type="text" placeholder="Write your comment...">
-              </div>
-            </li>
-          </ul>
-        </footer>
-      </section>
-      <form class="mt" action="#">
-        <div class="form-group mb-0">
-          <label class="sr-only" for="new-event">New event</label>
-          <textarea class="form-control" id="new-event" placeholder="Post something..." rows="3"></textarea>
-        </div>
-        <div class="btn-toolbar">
-          <div class="btn-group">
-            <a href="#" class="btn btn-sm btn-gray">
-              <i class="fa fa-camera fa-lg"></i>
-            </a>
-            <a href="#" class="btn btn-sm btn-gray">
-              <i class="fa fa-map-marker fa-lg"></i>
-            </a>
-          </div>
-          <button type="submit" class="btn btn-danger btn-sm ml-auto">Post</button>
-        </div>
-      </form>
+      <h2 class="m-l-1">Details</h2>
+      <table>
+        <tr><td>Nickname</td><td>{{person.nickname}}</td></tr>
+        <tr><td>Address</td><td>{{person.streetAddress}}</td></tr>
+        <tr><td>School</td><td>{{person.school}}</td></tr>
+        <tr><td>DOB</td><td>{{person.birthday}}</td></tr>
+        <tr><td>Gender</td><td>{{person.gender}}</td></tr>
+        <tr><td>Height</td><td>{{person.centimeters}}</td></tr>
+        <tr><td>Eye Color</td><td>{{person.eyeColor}}</td></tr>
+        <tr><td>Hair Color</td><td>{{person.hairColor}}</td></tr>
+        <tr><td>Hair Style</td><td>{{person.hairStyle}}</td></tr>
+        <tr><td>Body Build</td><td>{{person.bodyBuild}}</td></tr>
+        <tr><td>Facial Hair</td><td>{{person.facialHair}}</td></tr>
+        <tr><td>Marks</td><td>{{person.marks}}</td></tr>
+        <tr><td>Jewelery</td><td>{{person.jewelery}}</td></tr>
+        <tr>
+            <td>Social</td>
+            <td>
+              Twitter
+              Instagram
+              Facebook
+            </td>
+          </tr>
+        <tr><td>Last Known Location</td><td>{{person.latitude}} {{person.longitude}}</td></tr>
+        <tr>
+            <td>Contact With</td>
+            <td>
+              <table>
+                <tr><td>Nastassia Rashid</td><td>Friendly</td></tr>
+                <tr><td>Anthony Bartolo</td><td>Aggressive</td></tr>
+              </table>
+            </td>
+          </tr>
+      </table>
     </section>
   </div>
 </div>
