--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -27,7 +27,7 @@
                 <td><strong>Image</strong></td>
               </thead>
               <tbody>
-                <tr *ngFor="let person of dataService.persons" (click)="selectPerson(person.id)">
+                <tr *ngFor="let person of dataService.persons" (click)="selectPerson(person.id)" class="person-row">
                   <td>{{person.givenName}} {{person.surname}}</td>
                   <td>DOB: {{person.birthday}}</td>
                   <td><img src={{person.image}} style="width:50px;height:50px;"></td>
