move "desktop" out of its submenu

--- a/src/app/layout/sidebar/sidebar.template.html
+++ b/src/app/layout/sidebar/sidebar.template.html
@@ -21,6 +21,14 @@
   <!-- main notification links are placed inside of .sidebar-nav -->
   <ul class="sidebar-nav">
     <li>
+      <a [routerLink]=" ['dashboard'] ">
+        <span class="icon">
+          <i class="fa fa-desktop"></i>
+        </span>
+        Dashboard
+      </a>
+    </li>
+    <li [hidden]="!config.settings.showExtraUI">
       <a class="collapsed" data-target="#sidebar-dashboard" data-toggle="collapse" data-parent="#sidebar">
           <span class="icon">
             <i class="fa fa-desktop"></i>
@@ -30,7 +38,7 @@
       </a>
       <ul id="sidebar-dashboard" class="collapse">
         <li><a [routerLink]=" ['dashboard'] ">Dashboard</a></li>
-        <li [hidden]="!config.settings.showExtraUI"><a [routerLink]=" ['widgets'] ">Widgets</a></li>
+        <li><a [routerLink]=" ['widgets'] ">Widgets</a></li>
       </ul>
     </li>
     <li [hidden]="!config.settings.showExtraUI">
@@ -58,9 +66,6 @@
             <i class="glyphicon glyphicon-user"></i>
           </span>
         Profile
-        <sup class="text-warning fw-semi-bold">
-          new
-        </sup>
       </a>
     </li>
   </ul>
