--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -23,13 +23,13 @@
           <div class="widget-body"><table style="width:100%;">
               <thead>
                 <td><strong>Name</strong></td>
-                <td><strong>Date</strong></td>
+                <td><strong>Date of Birth</strong></td>
                 <td><strong>Image</strong></td>
               </thead>
               <tbody>
                 <tr *ngFor="let person of dataService.persons" (click)="selectPerson(person.id)" class="person-row">
                   <td>{{person.givenName}} {{person.surname}}</td>
-                  <td>DOB: {{person.birthday}}</td>
+                  <td>{{person.birthday}}</td>
                   <td><img src={{person.image}} style="width:50px;height:50px;"></td>
                 </tr>
               </tbody>
