Update mock data

--- a/src/app/person/person.template.html
+++ b/src/app/person/person.template.html
@@ -1,3 +1,8 @@
+<div [hidden]="true">
+      <a [routerLink]=" ['dashboard'] ">
+        Dashboard
+      </a>
+</div>
 <ol class="breadcrumb">
   <li class="breadcrumb-item">YOU ARE HERE</li>
   <li class="active breadcrumb-item">Profile</li>
