--- a/src/app/person/person.template.html
+++ b/src/app/person/person.template.html
@@ -4,7 +4,7 @@
       </a>
 </div>
 <ol class="breadcrumb">
-  <li class="breadcrumb-item">YOU ARE HERE</li>
+  <li class="breadcrumb-item" [hidden] = "true">YOU ARE HERE</li>
   <li class="active breadcrumb-item">Profile</li>
 </ol>
 <h1 class="page-title">{{person.givenName}} <span class="fw-semi-bold">{{person.surName}}</span></h1>
